test/compile_errors/err_numeric_separator_before_suffix_float.w
//! expect-error: numeric separator '_' may not precede the type suffix

fn main:
    let _ = 3.14_f32
